
 [#1107] support for large collection paging
 **Added totalRecords to IRODSDomainObject so that returned objects from queries can carry the total number of results
 **CollectionAndDataObjectListAndSearchAO results now include total record counts when available  
 **Adding pagination package to jargon-data-utils, providing a model that can be used to build smart paging controls into interfaces
 **Added a listDataObjectsAndCollectionsUnderPathProducingPagingAwareCollectionListing to CollectionAndDataObjectListAndSearchAO, which
 lists child data objects and collections, and provides addtional information on the paging status of the independent collections and data objects.
 
* [#511] add list shared data objs and permissions in coll and data obj list entry
**Added IRODSSharingService and related code in the jargon-user-tagging project.  The org.irods.jargon.usertagging.sharing
contains code to make shares a first-class object in Jargon, and works similar to the starred folder.  The top level
of a share is marked with a special AVU, and the service includes code to manage and query shares in various ways.
**Added a new DiscoveredServerPropertiesCache to the org.irods.jargon.core.connection package.  This is a dynamic cache of 
discovered properties of a connected iRODS server.  This helps address the challenge of discovering aspects of iRODS that are only
knowable by attempting an operation.  For example, if Jargon attmpts a specific query operation, and the required specific queries defined
in jargon-specquery.sh are not defined on the server, this can be remembered, so that jargon does not make repeated failed attampts at an opertion.
This is new and somewhat experimental, but should be a nice optimization for the future.  Well add a jargon.properties value that 
can be used to shut this capability off.
